# seo_automation

./: .gitignore  flutter_scrapped_data.json  pyproject.toml  test_data.json  test_data2.json  test_data3.json  test_data_flutter.json  test_data_seojuice.json  ts.md
seo_automation/: utils.py  web.py
seo_automation/static/: script.js  script2.js
seo_automation/static/cdn.rankauthority.com/: script2.js
seo_automation/templates/: flutter_page.html  index.html  index2.html  index3.html  index4.html
